openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sail-chat-api
  namespace: oscar-dev
  labels:
    app: sail-chat-api
spec:
  replicas: 1 # Makes 1 replica's
  selector:
    matchLabels:
      app: sail-chat-api
  template:
    metadata:
      labels:
        app: sail-chat-api
    spec:
      containers:
        - name: sail-chat-api
          image: earlybirdreal/sail-chat-api:118e7023e6f30a02e688b889388f7476fc14defd
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.2"
              memory: "499Mi"
            requests:
              cpu: "0.1"
              memory: "50Mi"
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: sail-chat-api-service
  namespace: oscar-dev
spec:
  selector:
    app: sail-chat-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sail-chat-api-route
  namespace: oscar-dev
spec:
  to:
    kind: Service
    name: sail-chat-api-service
  port:
    targetPort: 8080
